--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,6 +83,62 @@ codeblock {
   margin: 12px 32px 6px 0;
   padding: 12px 14px; }
 
+li {
+  display: grid;
+  grid-template-columns: 1fr 8fr;
+  border-bottom: 2px solid darkgrey; }
+
+.box1 {
+  min-height: 100px; }
+
+.rank {
+  font-size: 2rem;
+  font-weight: bolder;
+  text-align: center;
+  padding-top: 25px; }
+
+.streams {
+  text-align: center;
+  font-size: 10px; }
+
+.title {
+  font-weight: bold;
+  padding-top: 30px; }
+
+.artist {
+  font-style: italic; }
+
+.date {
+  text-align: right; }
+
+.box {
+  box-sizing: border-box;
+  margin: 80px auto;
+  width: 500px;
+  height: 500px;
+  box-shadow: 2px 2px 10px 10px gray; }
+
+.title2 {
+  display: block;
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 20px;
+  border-bottom: 2px solid gray; }
+
+.artist2 {
+  padding-top: 20px;
+  font-size: 26px;
+  color: grey;
+  text-align: center; }
+
+.streams2 {
+  font-size: 200px;
+  color: grey;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 70px; }
+
 body {
   background: #fafafa;
   display: flex;
